
[package]
name = "sawtooth-pbft-engine"
version = "1.0.4"
authors = ["Bitwise IO, Inc"]
description = "PBFT consensus algorithm for Hyperledger Sawtooth"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/hyperledger/sawtooth-pbft"
edition = "2018"

[package.metadata.deb]
maintainer = "sawtooth"
depends = "$auto"
assets = [
    ["packaging/systemd/sawtooth-pbft-engine.service", "/lib/systemd/system/sawtooth-pbft-engine.service", "644"],
    ["packaging/systemd/sawtooth-pbft-engine", "/etc/default/sawtooth-pbft-engine", "644"],
    ["target/release/pbft-engine", "/usr/bin/pbft-engine", "755"]
]
maintainer-scripts = "packaging/ubuntu"
extended-description = """\
An implementation of the Practical Byzantine Fault Tolerant (PBFT) consensus \
algorithm for Hyperledger Sawtooth."""

[features]
default = ["with-serde"]
with-serde = []

[dependencies]
atomicwrites = "0.2"
clap = "2.31"
hex = "0.3"
itertools = "0.7"
log = "0.4"
log4rs = "0.8"
log4rs-syslog = "3.0"
openssl = "0.10"
protobuf = { version = "2", features = ["with-serde"] }
sawtooth-sdk = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_millis = "0.1"

[patch.crates-io]
log4rs = { git = "https://github.com/ltseeley/log4rs", branch = "config-loading" }

[dev-dependencies]
rand = "0.5"

[build-dependencies]
protoc-rust = "2.14"

[[bin]]
name = "pbft-engine"
path = "src/main.rs"
